# ASV_phylo_investigate

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: extract_taxon_ASVfasta.py  extract_taxon_UNITE.py  make_ASV_fasta.py
tests/: test_ASV_extract.sh
tests/data/: ASVs.fa  asv_tax_UNITE_example.tsv
