[build-system]
requires = ["setuptools>=61.0", "pytest>=6.0", "versioningit"]
build-backend = "setuptools.build_meta"

[project]
name = "ASV_phylo_investigate"
authors = [
  { name = "Jason Stajich", email = "jason.stajich@ucr.edu" },
]
description = "Develop slices of reference and ASV datasets for phylogenetic investigation and naming"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["taxonomy", "phylogeny"]
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "version"]

[project.scripts]
extract_taxon_ASVfasta = "scripts:extract_taxon_ASVfasta"
extract_taxon_UNITE = "scripts:extract_taxon_UNITE"
make_ASV_fasta = "scripts:make_ASV_fasta"

[project.urls]
"Homepage" = "https://github.com/herptilemicrobiomes/ASV_phylo_investigate"
"Bug Tracker" = "https://github.com/herptilemicrobiomes/ASV_phylo_investigate/issues"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.versioningit.vcs]
method = "git"
default-tag = "0.1.0"
